--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -6,12 +6,17 @@ directory = mackup
 [applications_to_ignore]
 azure
 Docker
+electrum
 fasd
+gnupg
 htop
 Insomnia
 IPython
+istat-menus-5
 kubectl
 MacOSX
 Messages
 microsoft-remote-desktop
 ssh
+Terminal
+Transmission
