Remove oh-my-zsh and add VS Code Extensions

--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -13,10 +13,12 @@ htop
 Insomnia
 IPython
 istat-menus-5
+Jupyter
 kubectl
 MacOSX
 Messages
 microsoft-remote-desktop
+oh-my-zsh
 ssh
 Terminal
 Transmission
