--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/itchyny/lightline.vim.git
 [submodule "mackup/.vim/pack/vendor/start/ctrlp.vim"]
 	path = mackup/.vim/pack/vendor/start/ctrlp.vim
-	url = https://github.com/kien/ctrlp.vim.git
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
