--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,24 @@ black
 click # typer
 coloredlogs
 flake8
-flake8_commas
 flake8-blind-except
 flake8-bugbear
 flake8-builtins
+flake8-comprehensions
+flake8-debugger
 flake8-docstrings
 flake8-import-order
 flake8-logging-format
 flake8-module-name
+flake8-print
 flake8-rst-docstrings
+flake8_commas
 # hyperopt
 ipython
 isort
 # joblib
 jupyterlab
+# mlflow
 # more-itertools
 mypy
 # pip-tools
@@ -26,12 +30,17 @@ mypy
 pretty_errors
 pre-commit
 # prospector
+# pyarrow
 pylint
 pylint-fail-under
 pytest-cov
 pytest-mock
+pytest-xdist
+python-box
+# pyyaml
 rich
 # scalene
+# singleton_decorator 
 tenacity
 # tqdm
 # xenon
