--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ flake8-builtins
 flake8-comprehensions
 flake8-debugger
 flake8-docstrings
+flake8-eradicate
 flake8-import-order
 flake8-logging-format
 flake8-module-name
@@ -43,4 +44,5 @@ rich
 # singleton_decorator 
 tenacity
 # tqdm
+vulture
 # xenon
