--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -12,8 +12,8 @@ unbind %
 # Reload config file.
 bind r source-file ~/.tmux.conf
 
-# Enable mouse mode.
-set -g mouse on
+# # Enable mouse mode.
+# set -g mouse on
 
 # Do not rename windows automatically.
 set-option -g allow-rename off
@@ -21,9 +21,11 @@ set-option -g allow-rename off
 # Enable vi mode keys.
 set-window-option -g mode-keys vi
 
-# Start windows and panes at 1, not 0.
-set -g base-index 1
-setw -g pane-base-index 1
+# Prevent delayed ESC interpreted as ALT in vim.
+set -sg escape-time 10
+
+# Use system clipboard when `y` instead of <Enter>.
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
 
 ######################
 ### DESIGN CHANGES ###
@@ -41,9 +43,9 @@ setw -g clock-mode-colour colour5
 setw -g mode-style 'fg=colour1 bg=colour18 bold'
 
 # Panes.
-set -g pane-border-style 'fg=colour240 bg=colour0'
-set -g pane-active-border-style 'bg=colour0 fg=colour240'
-set -g pane-border-lines double
+set -g pane-border-style 'fg=colour0 bg=default'
+set -g pane-active-border-style 'bg=default fg=colour0'
+set -g pane-border-lines single
 
 # Statusbar.
 set -g status-position bottom
