--- a/mackup/.config/starship.toml
+++ b/mackup/.config/starship.toml
@@ -1,25 +1,25 @@
 # Inserts a blank line between shell prompts.
 add_newline = true
 
-[battery]
-disabled = true
+# [battery]
+# disabled = true
 
 # Replace the "❯" symbol in the prompt with "➜".
 [character]                            # The name of the module we are configuring is "character"
 success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "[➜](bold red)"         # The "error_symbol" segment is being set to "➜" with the color "bold red"
 
-[docker_context]
-disabled = true
+# [docker_context]
+# disabled = true
 
-[gcloud]
-disabled = true
+# [gcloud]
+# disabled = true
 
-[nodejs]
-symbol = ""
+# [nodejs]
+# symbol = ""
 
-[python]
-symbol = ""
+# [python]
+# symbol = ""
 
 [time]
 disabled = false
