--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -1,3 +1,6 @@
+# Prevent tmux from running a login shell and thus duplicating paths.
+set -g default-command $SHELL 
+
 # Remap prefix from 'C-b' to 'C-a'.
 unbind C-b
 set-option -g prefix C-a
@@ -9,20 +12,17 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# Reload config file.
-bind r source-file ~/.tmux.conf
-
-# # Enable mouse mode.
-# set -g mouse on
+# Enable mouse mode. This allows for scrolling.
+set -g mouse on
 
 # Do not rename windows automatically.
-set-option -g allow-rename off
+set-option -g allow-rename off 
 
 # Enable vi mode keys.
 set-window-option -g mode-keys vi
 
 # Prevent delayed ESC interpreted as ALT in vim.
-set -sg escape-time 10
+set -sg escape-time 0
 
 # Use system clipboard when `y` instead of <Enter>.
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
@@ -66,3 +66,21 @@ setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # Messages.
 set -g message-style 'fg=colour255 bg=colour235 bold'
+
+######################
+### PACKAGES: TPM #### 
+######################
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
