--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -12,13 +12,13 @@ gnupg
 htop
 Insomnia
 IPython
-istat-menus-5
 Jupyter
 kubectl
 MacOSX
 Messages
 microsoft-remote-desktop
-oh-my-zsh
-ssh
+Music
+; oh-my-zsh
+; ssh
 Terminal
-Transmission
+; Transmission
