--- a/mackup/.config/starship.toml
+++ b/mackup/.config/starship.toml
@@ -5,15 +5,16 @@ add_newline = true
 # disabled = true
 
 # Replace the "❯" symbol in the prompt with "➜".
-[character]                            # The name of the module we are configuring is "character"
-success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
-error_symbol = "[➜](bold red)"         # The "error_symbol" segment is being set to "➜" with the color "bold red"
+# [character]                            # The name of the module we are configuring is "character"
+# success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+# error_symbol = "[➜](bold red)"         # The "error_symbol" segment is being set to "➜" with the color "bold red"
 
-# [docker_context]
+[docker_context]
 # disabled = true
+format = "via [$symbol]($style)" # Drop text. 
 
-# [gcloud]
-# disabled = true
+[gcloud]
+disabled = true
 
 # [nodejs]
 # symbol = ""
