--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -4,6 +4,7 @@ path = git/dotfiles
 directory = mackup
 
 [applications_to_ignore]
+aws
 azure
 Docker
 electrum
@@ -22,3 +23,6 @@ Music
 ; ssh
 Terminal
 ; Transmission
+wget
+yarn
+zoxide
