--- a/mackup/.mackup/personal.cfg
+++ b/mackup/.mackup/personal.cfg
@@ -2,7 +2,9 @@
 name = Personal 
 
 [configuration_files]
-.path
-git/.gitignore
-.vscode/extensions.txt
 .fzf.zsh
+.hushlogin
+.macos
+.path
+.vscode/extensions.txt
+git/.gitignore
