--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -7,8 +7,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # Split panes using | and -.
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
@@ -17,6 +17,9 @@ set -g mouse on
 
 # Do not rename windows automatically.
 set-option -g allow-rename off 
+
+# Renumber windows automatically.
+set-option -g renumber-windows on
 
 # Enable vi mode keys.
 set-window-option -g mode-keys vi
