--- a/mackup/.gitconfig
+++ b/mackup/.gitconfig
@@ -19,7 +19,22 @@
 
 [pull]
 	rebase = true
+
 [init]
 	defaultBranch = main
+
 [push]
 	autoSetupRemote = true
+
+[delta]
+    navigate = true
+	side-by-side = true
+
+[interactive]
+    diffFilter = delta --color-only
+
+[merge]
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
