--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -4,6 +4,7 @@ path = git/dotfiles
 directory = mackup
 
 [applications_to_ignore]
+apple-music
 aws
 azure
 Docker
@@ -18,11 +19,13 @@ kubectl
 MacOSX
 Messages
 microsoft-remote-desktop
-Music
 ; oh-my-zsh
+preview
 ; ssh
 Terminal
 ; Transmission
+vlc
 wget
 yarn
+zoom
 zoxide
