--- a/mackup/.config/starship.toml
+++ b/mackup/.config/starship.toml
@@ -1,5 +1,7 @@
 # Inserts a blank line between shell prompts.
 add_newline = true
+# Double the time before Starship reports a timeout.
+command_timeout = 1000
 
 # [battery]
 # disabled = true
