--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -34,6 +34,5 @@ yabai -m config                                 \
 yabai -m rule --add label="System Settings" app="^System Settings$" title=".*" manage=off
 yabai -m rule --add label="Finder" app="^Finder$" title="(Co(py|nnect)|Move|Info|Pref)" manage=off
 yabai -m rule --add label="About This Mac" app="System Information" title="About This Mac" manage=off
-yabai -m rule --add label="Microsoft Teams" app="^Microsoft Teams$" manage=off # title="^.+\| Microsoft Teams$" manage=off
+yabai -m rule --add label="Microsoft Teams" app="^Microsoft Teams$" title=".*" manage=off
 yabai -m rule --add label="Okta Verify" app="^Okta Verify$" title=".*" manage=off
-# yabai -m rule --add label="EE" app="^PowerPoint$" title=".*" manage=off
