--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -30,6 +30,10 @@ set -sg escape-time 0
 # Use system clipboard when `y` instead of <Enter>.
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
 
+# Add true color support.
+set -g default-terminal "alacritty" 
+set-option -sa terminal-overrides ",alacritty*:Tc"
+
 ######################
 ### DESIGN CHANGES ###
 ######################
@@ -47,8 +51,8 @@ setw -g mode-style 'fg=colour1 bg=colour18 bold'
 
 # Panes.
 set -g pane-border-style 'fg=colour0 bg=default'
-set -g pane-active-border-style 'bg=default fg=colour0'
-set -g pane-border-lines single
+set -g pane-active-border-style 'fg=colour0 bg=default'
+set -g pane-border-lines single 
 
 # Statusbar.
 set -g status-position bottom
