--- a/mackup/.config/alacritty/alacritty.toml
+++ b/mackup/.config/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = ["/Users/degrandeniels/.config/alacritty/themes/one_dark.toml"]
 
 [env]
@@ -25,7 +26,7 @@ style = "Regular"
 [window]
 decorations = "buttonless"
 dynamic_title = false
-opacity = 0.95
+# opacity = 0.95
 option_as_alt = "OnlyLeft"
 
 [window.padding]
