--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -35,4 +35,5 @@ yabai -m rule --add label="About This Mac" app="System Information" title="About
 yabai -m rule --add label="Finder" app="^Finder$" title="(Co(py|nnect)|Move|Info|Pref)" manage=off
 yabai -m rule --add label="Maccy" app"^Macy$" manage=off
 yabai -m rule --add label="Okta Verify" app="^Okta Verify$" title=".*" manage=off
+yabai -m rule --add label="Python" app="^Python$" title=".*" manage=off
 yabai -m rule --add label="System Settings" app="^System Settings$" title=".*" manage=off
