--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -7,20 +7,21 @@ directory = mackup
 apple-music
 aws
 azure
-Docker
+cyberduck
+dbeaver
+docker
 electrum
 fasd
 gnupg
 htop
-IPython
-Jupyter
+ipython
+jupyter
 kubectl
-MacOSX
-Messages
-microsoft-remote-desktop
-preview
-Terminal
+ssh
+terminal
+tunnelblick
 vlc
+vscode-insiders
 wget
 yarn
 zoom
