--- a/mackup/.mackup/personal.cfg
+++ b/mackup/.mackup/personal.cfg
@@ -7,5 +7,9 @@ name = Personal
 .fzf.zsh
 .hushlogin
 .macos
+.parallel/will-cite
 .path
+Library/Application Support/librewolf/NativeMessagingHosts
+Library/Application Support/librewolf/Profiles/a7w3qhwy.default-default/containers.json
+Library/Application Support/librewolf/Profiles/a7w3qhwy.default-default/user.js
 git/.gitignore
