--- a/mackup/.mackup/personal.cfg
+++ b/mackup/.mackup/personal.cfg
@@ -3,12 +3,14 @@ name = Personal
 
 [configuration_files]
 .config/alacritty
+.config/infat/config.toml
 .functions
 .fzf.zsh
 .hushlogin
 .macos
 .parallel/will-cite
 .path
+Library/Application Support/Code/User/prompts
 Library/Application Support/librewolf/NativeMessagingHosts
 Library/Application Support/librewolf/Profiles/a7w3qhwy.default-default/containers.json
 Library/Application Support/librewolf/Profiles/a7w3qhwy.default-default/user.js
