--- a/mackup/.mackup/personal.cfg
+++ b/mackup/.mackup/personal.cfg
@@ -4,6 +4,7 @@ name = Personal
 [configuration_files]
 .config/alacritty
 .config/infat/config.toml
+.cursor/rules
 .functions
 .fzf.zsh
 .hushlogin
