--- a/mackup/.tmux.conf
+++ b/mackup/.tmux.conf
@@ -31,8 +31,8 @@ set -sg escape-time 0
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
 
 # Add true color support.
-set -g default-terminal "alacritty" 
-set-option -sa terminal-overrides ",alacritty*:Tc"
+set-option -ga terminal-overrides ",alacritty:Tc"
+set -g default-terminal "alacritty"
 
 ######################
 ### DESIGN CHANGES ###
