--- a/mackup/.mackup/personal.cfg
+++ b/mackup/.mackup/personal.cfg
@@ -12,7 +12,7 @@ name = Personal
 .parallel/will-cite
 .path
 Library/Application Support/Code/User/prompts
-Library/Application Support/librewolf/NativeMessagingHosts
-Library/Application Support/librewolf/Profiles/a7w3qhwy.default-default/containers.json
-Library/Application Support/librewolf/Profiles/a7w3qhwy.default-default/user.js
+Library/Containers/com.if.Amphetamine/Data/Library/Preferences/com.if.Amphetamine.plist
+Library/Containers/leits.MeetingBar/Data/Library/Preferences/leits.MeetingBar.plist
+Library/Containers/org.p0deje.Maccy/Data/Library/Preferences/org.p0deje.Maccy.plist
 git/.gitignore
