--- a/mackup/.mackup/personal.cfg
+++ b/mackup/.mackup/personal.cfg
@@ -2,7 +2,7 @@
 name = Personal 
 
 [configuration_files]
-.config/alacritty
+# TODO: .config/alacritty
 .config/infat/config.toml
 .cursor/rules
 .functions
