--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -7,6 +7,7 @@ directory = mackup
 apple-music
 aws
 azure
+cursor
 cyberduck
 dbeaver
 docker
@@ -21,7 +22,6 @@ ssh
 terminal
 tunnelblick
 vlc
-vscode-insiders
 wget
 xcode
 yarn
