--- a/mackup/.mackup/personal.cfg
+++ b/mackup/.mackup/personal.cfg
@@ -2,7 +2,9 @@
 name = Personal 
 
 [configuration_files]
-# TODO: .config/alacritty
+.config/alacritty/alacritty.toml
+.claude/notify_idle.sh
+.claude/notify_on_finish.sh
 .config/infat/config.toml
 .cursor/rules
 .functions
@@ -12,7 +14,11 @@ name = Personal
 .parallel/will-cite
 .path
 Library/Application Support/Code/User/prompts
-Library/Containers/com.if.Amphetamine/Data/Library/Preferences/com.if.Amphetamine.plist
-Library/Containers/leits.MeetingBar/Data/Library/Preferences/leits.MeetingBar.plist
-Library/Containers/org.p0deje.Maccy/Data/Library/Preferences/org.p0deje.Maccy.plist
 git/.gitignore
+
+[copy_only_files]
+# Handled by scripts/mackup_copy.sh as symlinks break sandboxed apps.
+# Format: path or path=/Applications/App.app (app is killed and reopened on restore).
+Library/Containers/com.if.Amphetamine/Data/Library/Preferences/com.if.Amphetamine.plist=/Applications/Amphetamine.app
+Library/Containers/leits.MeetingBar/Data/Library/Preferences/leits.MeetingBar.plist=/Applications/MeetingBar.app
+Library/Containers/org.p0deje.Maccy/Data/Library/Preferences/org.p0deje.Maccy.plist=/Applications/Maccy.app
