--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -1,5 +1,9 @@
 #!/usr/bin/env sh
 
+# Script additions for yabai.
+yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
+sudo yabai --load-sa
+
 # Global settings.
 yabai -m config                                 \
     mouse_follows_focus          off            \
